# client

./: CMakeLists.txt  client.kdev4  main.cpp
.kdev4/: client.kdev4
